--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
 	<properties>
 		<sculptor-version>3.1.0</sculptor-version>
 		<deltaspike.version>1.3.0</deltaspike.version>
+		<commons-lang-versions>3.4</commons-lang-versions>
 	</properties>
 
 	<build>
@@ -103,6 +104,11 @@
 			<artifactId>sculptor-generator-test-library</artifactId>
 			<version>${sculptor-version}</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>${commons-lang-versions}</version>
 		</dependency>
 	</dependencies>
 
